# objecter

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/jni/: .gitignore  CMakeLists.txt
app/src/main/jni/core/: Shared.cpp  Shared.h
app/src/main/jni/detector/: ObjectDetectionActivity.cpp  ObjectDetector.cpp  ObjectDetector.h
app/src/main/kotlin/com/crescenzi/objecter/: ObjectDetectionActivity.kt
app/src/main/res/drawable/: main_icon.xml
app/src/main/res/layout/: activity_object_detection.xml
gradle/: libs.versions.toml
